--- a/newstyle.css
+++ b/newstyle.css
@@ -58,6 +58,7 @@ html {
     z-index: 2000;
     transition: transform 0.3s ease-in;
     background: var(--_navbar_color);
+    padding: 0 1rem 0 1rem;
 }
 .logo_con{
     height: clamp(3.5rem,10vw,4rem);
@@ -74,6 +75,9 @@ html {
     height: clamp(3.5rem,10vw,4rem);
     display: grid;
     place-items: center;
+}
+.hamburger_menu{
+    width: 4rem;
 }
 .head_nav_sections ul{
     gap: 2.5rem;
@@ -205,7 +209,7 @@ a{
 .section_title{
     font-size: var(--title_font_size);
     color: var(--_primary_color);
-    padding: 2rem;
+    padding: clamp(1rem,2vw,2rem);
 }
 .section{
     display: flex;
@@ -458,6 +462,7 @@ a{
     align-items: center; 
     width: 100%;
     padding: 0 1rem 0 1rem;
+    margin: 1rem 0 1rem;
 }
 .about_details_con{
     display: flex;
@@ -517,7 +522,7 @@ a{
     display: flex;
     gap: 2rem;
     max-width: 75.75rem;
-    margin: 2rem 0 2rem;
+    margin: 1rem 0 1rem;
 }
 .skills{
     display: flex;
